    (to setup into /etc/oar/oar_phoenix.pl)
  - New (experimental!) scheduler written in Ocaml
  - New oaradmin option: --auto-offset
  - Bugfix #9995: oaraccouting script doesn't freeze anymore when db is unreachable. 
  - Cpusets are activated by default
  - Bugfix #9990: prevent from inserting jobs with invalid username (like an empty username)

version 2.4.2:
--------------
  - New "Hulot" module for intelligent and configurable energy saving
  - Bug #9906: fix bad optimization in the gantt lib (so bad scheduling
 
version 2.4.1:
--------------
  - Bug #9038: Security flaw in oarsub --notify option
  - Bug #9601: Cosystem jobs are no more killed when a resource is set to Absent
  - Fixed some packaging bugs
  - API bug fixes in job submission parsing
  - Added standby info into `oarnodes -s` and available_upto info into
    /resources uri of the API
  - Bug Grid'5000 #2687 Fix possible crashes of the scheduler.
  - Bug fix: with MySQL DB Finaud suspected resources which are not of the
    "default" type.
  - Signed debian packages (install oar-keyring package)

version 2.4.0:
--------------
  - Fix bug in oarnodesetting command generated by oar_resources_init (detect_resources)
  - Added a --state option to oarstat to only get the status of specified jobs 
    (optimized query, to allow scripting)
  - Added a REST API for OAR and OARGRID
  - Added JSON support into oarnodes, oarstat and oarsub
  - New Makefile adapted to build packages as non-root user
  - add the command "oar_resources_init" to easily detect and initialize the
    whole resources of a cluster.
  - "oaradmin version" : now retrieve the most recent database schema number
  - Fix rights on the "schema" table in postgresql.
  - Bug #7509: fix bug in add_micheline_subjob for array jobs + jobtypes 
  - Ctrl-C was not working anymore in oarsub.
    It seems that the signal handler does not handle the previous syntax
    ($SIG = 'qdel')
  - Fix bug in oarsh with the "-l" option