@@ -196,6 +196,14 @@ FINAUD_FREQUENCY="300"
 #SERVER_PROLOGUE_EXEC_FILE="/path/to/prog"
 #SERVER_EPILOGUE_EXEC_FILE="/path/to/prog"
 
+#
+# File to execute just after a group of resources has been supected. It may 
+# be used to trigger automatic actions to heal the resources. The script is 
+# started with the list of resources put in its STDIN: resource_id followed
+# by a space and the network_address (one line per resource)
+#HEALING_EXEC_FILE="/path/to/prog"
+#HEALING_TIMEOUT="10"
+
 ########################
 # Scheduler parameters #
 ###############################################################################
